# swagger/swagger.json
@@ -10,6 +10,97 @@
     },
     "basePath": "/v1",
     "paths": {
+        "/category/": {
+            "get": {
+                "tags": [
+                    "category"
+                ],
+                "description": "获取分类列表",
+                "responses": {
+                    "1101": {
+                        "description": "外部传入参数错误"
+                    },
+                    "1102": {
+                        "description": "请求出错"
+                    },
+                    "200": {
+                        "description": "请求成功"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "category"
+                ],
+                "description": "创建分类",
+                "operationId": "CategoryController.创建分类",
+                "parameters": [
+                    {
+                        "in": "formData",
+                        "name": "categoryName",
+                        "description": "分类名字",
+                        "required": true,
+                        "type": "string",
+                        "default": "前端"
+                    }
+                ],
+                "responses": {
+                    "1101": {
+                        "description": "外部传入参数错误"
+                    },
+                    "1102": {
+                        "description": "请求出错"
+                    },
+                    "1109": {
+                        "description": "分类已存在"
+                    },
+                    "200": {
+                        "description": "请求成功"
+                    }
+                }
+            }
+        },
+        "/category/{id}": {
+            "put": {
+                "tags": [
+                    "category"
+                ],
+                "description": "更新分类",
+                "operationId": "CategoryController.更新分类",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "分类id",
+                        "required": true,
+                        "type": "string",
+                        "default": "分类id"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "tagName",
+                        "description": "标签名字",
+                        "required": true,
+                        "type": "string",
+                        "default": "javascript"
+                    }
+                ],
+                "responses": {
+                    "1101": {
+                        "description": "外部传入参数错误"
+                    },
+                    "1102": {
+                        "description": "请求出错"
+                    },
+                    "1108": {
+                        "description": "标签名已存在"
+                    },
+                    "200": {
+                        "description": "请求成功"
+                    }
+                }
+            }
+        },
         "/login/": {
             "post": {
                 "tags": [
@@ -279,6 +370,10 @@
         {
             "name": "tag",
             "description": "Operations about Tag\n"
+        },
+        {
+            "name": "category",
+            "description": "Operations about Category\n"
         },
         {
             "name": "login",
